# gearbase

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  gearbase-spec.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.prism/: project-model.md
apps/canvas-web/: index.html  package.json  tsconfig.tsbuildinfo
apps/canvas-web/src/: App.css  App.tsx  vite-env.d.ts
apps/canvas-web/src/components/: CanvasStage.tsx  Palette.tsx  Sidebar.tsx
apps/canvas-web/src/lib/: canvas.ts
apps/canvas-web/test/: canvas.test.ts
apps/fth-web/: index.html  package.json
apps/fth-web/src/: App.css  App.tsx
apps/poll-web/: index.html  package.json  tsconfig.json
apps/poll-web/src/: App.css  App.tsx
apps/showcase/: index.html  package.json  tsconfig.tsbuildinfo
apps/showcase/src/: App.css  App.tsx  vite-env.d.ts
docs/: DEVIATIONS.md  OPEN_QUESTIONS.md  PLATFORM_NOTES.md  PROGRESS.md  README.md  hoodi-funding.md  local-dev.md
docs/local-dev/: validators-malachite-pub-keys.json
programs/gearbase-core/: Cargo.toml
programs/gearbase-core/src/: lib.rs
programs/room-canvas/: .binpath  Cargo.toml  build.rs
programs/room-canvas/app/: Cargo.toml
programs/room-canvas/app/src/: lib.rs
programs/room-canvas/client/: Cargo.toml  build.rs  room_canvas_client.idl
programs/room-canvas/client/src/: lib.rs  room_canvas_client.rs
programs/room-canvas/src/: lib.rs
programs/room-canvas/tests/: gtest.rs
programs/room-fth/: .binpath  Cargo.toml  build.rs
programs/room-fth/app/: Cargo.toml
programs/room-fth/app/src/: lib.rs
programs/room-fth/client/: Cargo.toml  build.rs  room_fth_client.idl
programs/room-fth/client/src/: lib.rs  room_fth_client.rs
programs/room-fth/src/: lib.rs
programs/room-fth/tests/: gtest.rs
programs/room-poll/: .binpath  Cargo.toml  build.rs
programs/room-poll/app/: Cargo.toml
programs/room-poll/app/src/: lib.rs
programs/room-poll/client/: Cargo.toml  build.rs  room_poll_client.idl
programs/room-poll/client/src/: lib.rs  room_poll_client.rs
programs/room-poll/src/: lib.rs
programs/room-poll/tests/: gtest.rs
scripts/: create-room.ts  deploy.ts  read-room.ts  smoke.ts
