[package]
name = "gearbase-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
parity-scale-codec.workspace = true
scale-info.workspace = true
sails-rs = { workspace = true, features = ["ethexe"] }
