[package]
name = "room-canvas-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generated Rust client for room-canvas"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "build"] }
room-canvas-app.workspace = true
